<resources>
    <string name="app_name">Instagram</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="take_picture">Take Picture</string>
    <string name="description">Description</string>
    <string name="submit">Submit</string>
    <string name="created_at">Created At</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="uploaded_image">Uploaded Image</string>
    <string name="capture_your_moment">Capture your moment!</string>
    <string name="what_s_your_update">What\'s your update?</string>
    <string name="create">Create!</string>
    <string name="sign_up">Sign Up</string>
</resources>