<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragments.ComposeFragment">

    <EditText
        android:id="@+id/etDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="10dp"
        android:autofillHints="name"
        android:background="@color/light_gray"
        android:hint="@string/what_s_your_update"
        android:inputType="textPersonName"
        android:lines="5"
        android:maxLines="5"
        android:minHeight="48dp"
        android:padding="10dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnCaptureImage"
        android:layout_width="311dp"
        android:layout_height="53dp"
        android:layout_marginTop="20dp"
        android:background="@android:color/holo_blue_bright"
        android:textColor="@color/white"
        android:text="@string/capture_your_moment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etDescription" />

    <ImageView
        android:id="@+id/ivPostImage"
        android:layout_width="300dp"
        android:layout_height="400dp"
        android:contentDescription="@string/uploaded_image"
        android:src="@drawable/placeholder"
        app:layout_constraintEnd_toEndOf="@+id/btnCaptureImage"
        app:layout_constraintStart_toStartOf="@+id/btnCaptureImage"
        app:layout_constraintTop_toBottomOf="@+id/btnCaptureImage"
        tools:srcCompat="@tools:sample/avatars" />

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="311dp"
        android:layout_height="53dp"
        android:text="@string/create"
        android:background="@android:color/holo_blue_bright"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.513"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivPostImage" />

</androidx.constraintlayout.widget.ConstraintLayout>